can now highlight a single space, and fixed line spacing diffferences between lines with sup tags and those without

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -33,6 +33,7 @@ p {
     font-weight: 350;
     letter-spacing: -.02em;
     word-spacing: -0.02em;
+    line-height: 1.4; /* set so that sup tags do not make some lines higher than others */
   
 }
 
